# struct_field_names_as_array

./: CHANGELOG.md  CHANGELOG.rst  Cargo.toml  LICENSE  README.md  TODO.md  generate_readme.sh  rustfmt.toml  tok.sh
.github/workflows/: build.yml  coverage.yml  generate-readme.yml  publish.yml
src/: attrs.rs  lib.rs
struct-field-names-as-array/: Cargo.toml  README.md
struct-field-names-as-array-derive/: Cargo.toml  README.md
struct-field-names-as-array-derive/src/: attrs.rs  lib.rs
struct-field-names-as-array/src/: lib.rs
struct-field-names-as-array/tests/: flatten.rs  rename_all.rs  test_visibility.rs  tests.rs
tests/: rename_all.rs  test_visibility.rs  tests.rs
