[package]
name = "struct-field-names-as-array"
version = "0.1.2"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Provides a procedural macro that generates an array of the field names of a named struct"
homepage = "https://github.com/jofas/struct_field_names_as_array"
repository = "https://github.com/jofas/struct_field_names_as_array"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.80", features = ["derive", "printing", "extra-traits"] }
quote = "^1.0.10"
proc-macro2 = "^1.0.29"
