[package]
name = "struct-field-names-as-array-derive"
version = "0.3.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Procedural macros for the struct-field-names-as-array crate"
keywords = ["macro", "proc_macro"]
homepage = "https://github.com/jofas/struct_field_names_as_array"
repository = "https://github.com/jofas/struct_field_names_as_array"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
